# xny-cli

./: .gitignore  Cargo.toml  README.md  data.json
node/: package-lock.json  scrape.js
src/: main.rs
