[package]
name = "xny"
edition = "2021"
version = "1.0.2"
authors = ["Your Name <your@email.com>"]
license = "AGPL-1.0-or-later"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/YesSeri/xny-cli"
repository = "https://github.com/YesSeri/xny-cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0.94"
url = "2.3.1"
clap = { version = "4.2.1", features = ["derive", "std"], default-features = false }
minreq = { version = "2.7.0", features = ["https"] }

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = false
default-features = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

