[package]
name = "xny"
edition = "2021"
version = "1.0.2"
authors = ["Your Name <your@email.com>"]
license = "AGPL-1.0-or-later"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/YesSeri/xny-cli"
repository = "https://github.com/YesSeri/xny-cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0.94"
url = "2.3.1"
minreq = { version = "2.7.0", features = ["https"] }
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
